--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -29,4 +29,19 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+body{
+  background-color: #2980b9;
+}
+
+.container{
+  margin-left: auto;
+  margin-right: auto;
+  width: 75%;
+}
+
+.youtube{
+  margin-top: 20px;
+  margin-right: 20px;
 }
